# speaker-service

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.base  README.md  api.py  pyproject.toml  requirements.txt  server.py  test_speaker_client_unit.py
client/: eval_speaker.py  speaker_client.py  test_client.py
clustering/: base.py  offline_spectral.py  spectral.py
docs/: api.md  bella_api.md  eval_report.md
engine/: base.py  campplus.py  eres2net.py  firered_vad.py  funasr_base.py  onnx_engine.py  vad_base.py
models/iic/speech_eres2netv2_sv_zh-cn_16k-common/: .msc  .mv
models/onnx/: speaker_embedding_v2.onnx  speaker_embedding_v2.onnx.data
proto/: speaker.proto
scripts/: README.md  export_onnx.py  gen_proto.sh  verify_onnx.py
tests/: test_api_contract.py  test_speaker_client_unit.py
