[project]
name = "speaker-service"
version = "0.1.0"
description = "gRPC Speaker Embedding microservice (ERes2NetV2/CamPlus)"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.64.0",
    "grpcio-tools>=1.64.0",
    "python-dotenv>=1.2.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "funasr>=1.2.6",
    "modelscope>=1.18.0",
    "scikit-learn>=1.5.0",
    "scipy>=1.13.0",
    "pyannote.metrics>=3.2.1",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
