[project]
name = "speaker-service"
version = "0.1.0"
description = "HTTP Speaker Embedding microservice (ERes2NetV2 ONNX)"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.0",
    "numpy>=1.24.0",
"scipy>=1.13.0",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "python-multipart>=0.0.32",
    "httpx>=0.27.0",
    "onnxruntime>=1.20.0",
    "kaldi-native-fbank>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
